--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
                 title: "C Programming Masterclass",
                 content: `<div class="terminal">
                     <h3>Welcome to C Programming!</h3>
-                    <p>Learn fundamental concepts:</p>
+                    <p>Learn fundamental to professional</p>
+                    <p>Course Contents :</p>
                     <ul>
                         <li>Pointers and memory management</li>
                         <li>Data structures and algorithms</li>
@@ -284,7 +285,8 @@ int main() {
                 title: "Python Automation",
                 content: `<div class="terminal">
                     <h3>Python Power!</h3>
-                    <p>Learn to automate:</p>
+                    <p>Learn fundamentals to professional</p>
+                    <p>Course Contents :</p>
                     <ul>
                         <li>Web scraping</li>
                         <li>Data analysis</li>
@@ -297,7 +299,8 @@ int main() {
                 title: "Bash Scripting Guru",
                 content: `<div class="terminal">
                     <h3>Bash Automation</h3>
-                    <p>Master shell scripting:</p>
+                    <p>Master shell scripting</p>
+                    <p>Course Contents :</p>
                     <ul>
                         <li>Automate repetitive tasks</li>
                         <li>System monitoring</li>
