--- a/index.html
+++ b/index.html
@@ -195,15 +195,15 @@
         <div class="course-grid" id="courses-section">
             <div class="course-card" onclick="showCourse('c')">
                 <h3><i class="fas fa-terminal"></i> C Programming</h3>
-                <p>Master low-level programming and system development</p>
+                <p>Master low-level programming and system development and hacking</p>
             </div>
             <div class="course-card" onclick="showCourse('linux')">
                 <h3><i class="fab fa-linux"></i> Linux Administration</h3>
-                <p>Become a server management expert</p>
+                <p>Become a server management expert and networks</p>
             </div>
             <div class="course-card" onclick="showCourse('python')">
                 <h3><i class="fab fa-python"></i> Python Programming</h3>
-                <p>Learn scripting and automation</p>
+                <p>Learn scripting, automation and hacking</p>
             </div>
             <div class="course-card" onclick="showCourse('bash')">
                 <h3><i class="fas fa-code"></i> Bash Scripting</h3>
@@ -253,7 +253,7 @@
                 title: "C Programming Masterclass",
                 content: `<div class="terminal">
                     <h3>Welcome to C Programming!</h3>
-                    <p>Learn fundamental to professional</p>
+                    <p>Beginner to professional</p>
                     <p>Course Contents :</p>
                     <ul>
                         <li>Pointers and memory management</li>
@@ -272,7 +272,8 @@ int main() {
                 title: "Linux Administration Pro",
                 content: `<div class="terminal">
                     <h3>Master Linux Systems</h3>
-                    <p>Key topics:</p>
+                    <p>Beginner To Professional
+                    <p>Course Contents :</p>
                     <ul>
                         <li>User and permission management</li>
                         <li>Network configuration</li>
@@ -285,7 +286,7 @@ int main() {
                 title: "Python Automation",
                 content: `<div class="terminal">
                     <h3>Python Power!</h3>
-                    <p>Learn fundamentals to professional</p>
+                    <p>Beginner To Professional</p>
                     <p>Course Contents :</p>
                     <ul>
                         <li>Web scraping</li>
@@ -300,6 +301,7 @@ int main() {
                 content: `<div class="terminal">
                     <h3>Bash Automation</h3>
                     <p>Master shell scripting</p>
+                    <p>Beginner To Professional</p>
                     <p>Course Contents :</p>
                     <ul>
                         <li>Automate repetitive tasks</li>
