--- a/index.html
+++ b/index.html
@@ -195,7 +195,10 @@
         <div class="course-grid" id="courses-section">
             <div class="course-card" onclick="showCourse('c')">
                 <h3><i class="fas fa-terminal"></i> C Programming</h3>
-                <p>Master low-level programming and system development and hacking</p>
+                <p>      Master</p>
+                <p>Low-level programming</p>
+                <p>System development</p>
+                <p></p>Hacking</p>
             </div>
             <div class="course-card" onclick="showCourse('linux')">
                 <h3><i class="fab fa-linux"></i> Linux Administration</h3>
@@ -252,8 +255,8 @@
             c: {
                 title: "C Programming Masterclass",
                 content: `<div class="terminal">
-                    <h3>Welcome to C Programming!</h3>
-                    <p>Beginner to professional</p>
+                    <h3>Welcome To C Programming!</h3>
+                    <p>Beginner To professional</p>
                     <p>Course Contents :</p>
                     <ul>
                         <li>Pointers and memory management</li>
@@ -283,7 +286,7 @@ int main() {
                 </div>`
             },
             python: {
-                title: "Python Automation",
+                title: "Python Scripting",
                 content: `<div class="terminal">
                     <h3>Python Power!</h3>
                     <p>Beginner To Professional</p>
