--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@ int main() {
     printf("Hello Hackers!");
     return 0;
 }</pre>
+<button class="enroll-btn" onclick="enroll('C Programming')">Enroll Now</button>
                 </div>`
             },
             linux: {
@@ -283,6 +284,7 @@ int main() {
                         <li>Server hardening</li>
                     </ul>
                     <pre>$ sudo apt-get install knowledge</pre>
+                    <button class="enroll-btn" onclick="enroll('Linux Administration')">Enroll Now</button>
                 </div>`
             },
             python: {
@@ -297,6 +299,7 @@ int main() {
                         <li>Task automation</li>
                     </ul>
                     <pre>print("Hack the Planet!")</pre>
+                    <button class="enroll-btn" onclick="enroll('Python Programming')">Enroll Now</button>
                 </div>`
             },
             bash: {
@@ -313,7 +316,8 @@ int main() {
                     </ul>
                     <pre>#!/bin/bash
 echo "Hello Terminal!"</pre>
-                </div>`
+ <button class="enroll-btn" onclick="enroll('Bash Scripting')">Enroll Now</button>          
+ </div>`
             }
         };
 
