--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         <div class="content-container" id="course-content">
             <div class="back-button" onclick="showSection('courses')">
-                ← Back to Courses
+                ← [Back to Courses]
             </div>
             <div id="course-data"></div>
         </div>
@@ -269,8 +269,9 @@ int main() {
     printf("Hello Hackers!");
     return 0;
 }</pre>
-<button class="enroll-btn" onclick="enroll('C Programming')">Enroll Now</button>
-                </div>`
+                </div>
+                <p> </p>   
+                <button class="enroll-btn" onclick="enroll('C Programming')">Enroll Now</button>
             },
             linux: {
                 title: "Linux Administration Pro",
