--- a/index.html
+++ b/index.html
@@ -269,10 +269,8 @@ int main() {
     printf("Hello Hackers!");
     return 0;
 }</pre>
-<button class="enroll-btn" onclick="enroll('C Programming')">Enroll Now</button>
-                </div>
-            
-            
+                </div>`
+                <button class="enroll-btn" onclick="enroll('C Programming')">Enroll Now</button>
             },
             linux: {
                 title: "Linux Administration Pro",
