--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@ int main() {
     printf("Hello Hackers!");
     return 0;
 }</pre>
+<button class="enroll-btn" onclick="enroll('C Programming')">Enroll Now</button>
                 </div>`
             },
             linux: {
