--- a/index.html
+++ b/index.html
@@ -114,6 +114,28 @@
             margin: 20px 0;
             border-radius: 5px;
         }
+        <!-- arrow -->
+            .arrow {
+            font-size: 48px;
+            color: #ff0000;
+            animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+            0% { opacity: 1; }
+            50% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        /* Optional - center the arrow on the page */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        
 
         <!-- Add this CSS -->
 <style>
