--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         <div class="content-container" id="course-content">
             <div class="back-button" onclick="showSection('courses')">
-                ← [Back to Courses]
+                ← [Back to Courses] <div class="arrow">➔</div>
             </div>
             <div id="course-data"></div>
         </div>
