--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         <div class="content-container" id="course-content">
             <div class="back-button" onclick="showSection('courses')">
-               <div class="arrow">➔</div>  [Back to Courses] 
+               ➔ [Back to Courses] 
             </div>
             <div id="course-data"></div>
         </div>
