--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
             <div class="back-button" onclick="showSection('courses')">
                ➔ [Back to Courses] 
             </div>
+            <div class="big-arrow">
+                 &#8594; <!-- Big blinking right arrow -->
+            </div>
             <div id="course-data"></div>
         </div>
     </main>
