--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ int main() {
     printf("Hello Hackers!");
     return 0;
 }</pre>
-<button class="enroll-btn" onclick="enroll('C Programming')">Enroll Now</button>
+<button class="enroll-btn" onclick="enroll('C Programming')">  ➔   Enroll Now</button>
                 </div>`
             },
             linux: {
@@ -300,7 +300,7 @@ int main() {
                         <li>Server hardening</li>
                     </ul>
                     <pre>$ sudo apt-get install knowledge</pre>
-                    <button class="enroll-btn" onclick="enroll('Linux Administration')">Enroll Now</button>
+                    <button class="enroll-btn" onclick="enroll('Linux Administration')">  ➔   Enroll Now</button>
                 </div>`
             },
             python: {
@@ -315,7 +315,7 @@ int main() {
                         <li>Task automation</li>
                     </ul>
                     <pre>print("Hack the Planet!")</pre>
-                    <button class="enroll-btn" onclick="enroll('Python Programming')">Enroll Now</button>
+                    <button class="enroll-btn" onclick="enroll('Python Programming')">  ➔   Enroll Now</button>
                 </div>`
             },
             bash: {
@@ -332,7 +332,7 @@ int main() {
                     </ul>
                     <pre>#!/bin/bash
 echo "Hello Terminal!"</pre>
- <button class="enroll-btn" onclick="enroll('Bash Scripting')">Enroll Now</button>          
+ <button class="enroll-btn" onclick="enroll('Bash Scripting')">  ➔   Enroll Now</button>          
  </div>`
             }
         };
