--- a/index.html
+++ b/index.html
@@ -412,11 +412,12 @@ int main() {
                     <h3>Master Linux Systems</h3>
                     <p>Beginner To Professional
                     <p>Course Contents :</p>
-                    <ul>
-                        <li>User and permission management</li>
-                        <li>Network configuration</li>
-                        <li>Server hardening</li>
-                    </ul>
+                    <div class="course-links">
+                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C_PROGRAMMING</a>
+                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX_ADMIN</a>
+                         <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON_SCRIPTING</a>
+                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> BASH_SCRIPTING</a>
+                    </div>
                     <pre>$ sudo apt-get install knowledge</pre>
                     <button class="enroll-btn" onclick="enroll('Linux Administration')">  ➔   Enroll Now</button>
                 </div>`
@@ -427,11 +428,12 @@ int main() {
                     <h3>Python Power!</h3>
                     <p>Beginner To Professional</p>
                     <p>Course Contents :</p>
-                    <ul>
-                        <li>Web scraping</li>
-                        <li>Data analysis</li>
-                        <li>Task automation</li>
-                    </ul>
+                    <div class="course-links">
+                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C_PROGRAMMING</a>
+                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX_ADMIN</a>
+                         <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON_SCRIPTING</a>
+                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> BASH_SCRIPTING</a>
+                    </div>
                     <pre>print("Hack the Planet!")</pre>
                     <button class="enroll-btn" onclick="enroll('Python Programming')">  ➔   Enroll Now</button>
                 </div>`
@@ -443,11 +445,12 @@ int main() {
                     <p>Master shell scripting</p>
                     <p>Beginner To Professional</p>
                     <p>Course Contents :</p>
-                    <ul>
-                        <li>Automate repetitive tasks</li>
-                        <li>System monitoring</li>
-                        <li>Advanced scripting techniques</li>
-                    </ul>
+                    <div class="course-links">
+                        <a href="#" class="course-link" onclick="showCourse('c', event)">> C_PROGRAMMING</a>
+                        <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX_ADMIN</a>
+                        <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON_SCRIPTING</a>
+                        <a href="#" class="course-link" onclick="showCourse('bash', event)">> BASH_SCRIPTING</a>
+                   </div>
                     <pre>#!/bin/bash
 echo "Hello Terminal!"</pre>
  <button class="enroll-btn" onclick="enroll('Bash Scripting')">  ➔   Enroll Now</button>          
