--- a/index.html
+++ b/index.html
@@ -390,12 +390,12 @@
                 content: `<div class="terminal">
                     <h3>Welcome To C Programming!</h3>
                     <p>Beginner To professional</p>
-                    <p>Checkout Course Contents :</p>
+                    <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C_PROGRAMMING</a>
-                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX_ADMIN</a>
-                         <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON_SCRIPTING</a>
-                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> BASH_SCRIPTING</a>
+                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C BASIC TO ADVANCE</a>
+                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> DATA STRUCTURE</a>
+                         <a href="#" class="course-link" onclick="showCourse('python', event)">> SYSTEM CALLS</a>
+                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> FILE I/O OPERATION</a>
                     </div>
                     <pre>#include &lt;stdio.h&gt;
 
@@ -411,12 +411,12 @@ int main() {
                 content: `<div class="terminal">
                     <h3>Master Linux Systems</h3>
                     <p>Beginner To Professional
-                    <p>Course Contents :</p>
+                    <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C_PROGRAMMING</a>
-                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX_ADMIN</a>
-                         <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON_SCRIPTING</a>
-                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> BASH_SCRIPTING</a>
+                         <a href="#" class="course-link" onclick="showCourse('c', event)">> LINUX BASIC COMMANDS</a>
+                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX ADVANCE COMMANDS</a>
+                         <a href="#" class="course-link" onclick="showCourse('python', event)">> NETWORK CONFIGURATION</a>
+                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> SERVICE MANAGEMENT (systemd)</a>
                     </div>
                     <pre>$ sudo apt-get install knowledge</pre>
                     <button class="enroll-btn" onclick="enroll('Linux Administration')">  ➔   Enroll Now</button>
@@ -427,12 +427,12 @@ int main() {
                 content: `<div class="terminal">
                     <h3>Python Power!</h3>
                     <p>Beginner To Professional</p>
-                    <p>Course Contents :</p>
+                    <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C_PROGRAMMING</a>
-                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX_ADMIN</a>
-                         <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON_SCRIPTING</a>
-                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> BASH_SCRIPTING</a>
+                         <a href="#" class="course-link" onclick="showCourse('c', event)">> PYTHON BASIC</a>
+                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> PYTHON OBJECT-ORIENTED</a>
+                         <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON WEB DEVELOPMENT (django)</a>
+                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> PYTHON MOBILE APP (kivy)</a>
                     </div>
                     <pre>print("Hack the Planet!")</pre>
                     <button class="enroll-btn" onclick="enroll('Python Programming')">  ➔   Enroll Now</button>
@@ -444,12 +444,12 @@ int main() {
                     <h3>Bash Automation</h3>
                     <p>Master shell scripting</p>
                     <p>Beginner To Professional</p>
-                    <p>Course Contents :</p>
+                    <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                        <a href="#" class="course-link" onclick="showCourse('c', event)">> C_PROGRAMMING</a>
-                        <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX_ADMIN</a>
-                        <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON_SCRIPTING</a>
-                        <a href="#" class="course-link" onclick="showCourse('bash', event)">> BASH_SCRIPTING</a>
+                        <a href="#" class="course-link" onclick="showCourse('c', event)">> BASH BASIC/ADVANCE</a>
+                        <a href="#" class="course-link" onclick="showCourse('linux', event)">> BACKDOOR MAINTENANCE</a>
+                        <a href="#" class="course-link" onclick="showCourse('python', event)">> NETWORK MAPPING</a>
+                        <a href="#" class="course-link" onclick="showCourse('bash', event)">> LOG CLEANING</a>
                    </div>
                     <pre>#!/bin/bash
 echo "Hello Terminal!"</pre>
