--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     <p>Beginner To professional</p>
                     <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C BASIC TO ADVANCE</a>
+                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C BASIC/ADVANCE</a>
                          <a href="#" class="course-link" onclick="showCourse('linux', event)">> DATA STRUCTURE</a>
                          <a href="#" class="course-link" onclick="showCourse('python', event)">> SYSTEM CALLS</a>
                          <a href="#" class="course-link" onclick="showCourse('bash', event)">> FILE I/O OPERATION</a>
@@ -413,8 +413,8 @@ int main() {
                     <p>Beginner To Professional
                     <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                         <a href="#" class="course-link" onclick="showCourse('c', event)">> LINUX BASIC COMMANDS</a>
-                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> LINUX ADVANCE COMMANDS</a>
+                         <a href="#" class="course-link" onclick="showCourse('c', event)">> LINUX BASIC/ADVANCE COMMANDS</a>
+                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> THE KERNEL</a>
                          <a href="#" class="course-link" onclick="showCourse('python', event)">> NETWORK CONFIGURATION</a>
                          <a href="#" class="course-link" onclick="showCourse('bash', event)">> SERVICE MANAGEMENT (systemd)</a>
                     </div>
