--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ int main() {
                     <p>CheckOut Course Contents :</p>
                     <div class="course-links">
                          <a href="#" class="course-link" onclick="showCourse('c', event)">> PYTHON BASIC</a>
-                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> PYTHON OBJECT-ORIENTED</a>
+                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> PYTHON OBJECT-ORIENTED PROGRAMMING</a>
                          <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON WEB DEVELOPMENT (django)</a>
                          <a href="#" class="course-link" onclick="showCourse('bash', event)">> PYTHON MOBILE APP (kivy)</a>
                     </div>
