--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@
                     <p>Beginner To professional</p>
                     <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                         <a href="#" class="course-link" onclick="showCourse('c', event)">> C BASIC/ADVANCE</a>
-                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> DATA STRUCTURE</a>
-                         <a href="#" class="course-link" onclick="showCourse('python', event)">> SYSTEM CALLS</a>
-                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> FILE I/O OPERATION</a>
+                         <a href="#" class="course-link" onclick="showCourse('c-outline1', event)">> C BASIC/ADVANCE</a>
+                         <a href="#" class="course-link" onclick="showCourse('c-outline2', event)">> DATA STRUCTURE</a>
+                         <a href="#" class="course-link" onclick="showCourse('c-outline3', event)">> SYSTEM CALLS</a>
+                         <a href="#" class="course-link" onclick="showCourse('c-outline4', event)">> FILE I/O OPERATION</a>
                     </div>
                     <pre>#include &lt;stdio.h&gt;
 
@@ -413,10 +413,10 @@ int main() {
                     <p>Beginner To Professional
                     <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                         <a href="#" class="course-link" onclick="showCourse('c', event)">> LINUX BASIC/ADVANCE COMMANDS</a>
-                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> THE KERNEL</a>
-                         <a href="#" class="course-link" onclick="showCourse('python', event)">> NETWORK CONFIGURATION</a>
-                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> SERVICE MANAGEMENT (systemd)</a>
+                         <a href="#" class="course-link" onclick="showCourse('l-outline1', event)">> LINUX BASIC/ADVANCE COMMANDS</a>
+                         <a href="#" class="course-link" onclick="showCourse('l-outline2', event)">> THE KERNEL</a>
+                         <a href="#" class="course-link" onclick="showCourse('l-outline3', event)">> NETWORK CONFIGURATION</a>
+                         <a href="#" class="course-link" onclick="showCourse('l-outline4', event)">> SERVICE MANAGEMENT (systemd)</a>
                     </div>
                     <pre>$ sudo apt-get install knowledge</pre>
                     <button class="enroll-btn" onclick="enroll('Linux Administration')">  ➔   Enroll Now</button>
@@ -429,10 +429,10 @@ int main() {
                     <p>Beginner To Professional</p>
                     <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                         <a href="#" class="course-link" onclick="showCourse('c', event)">> PYTHON BASIC</a>
-                         <a href="#" class="course-link" onclick="showCourse('linux', event)">> PYTHON OBJECT-ORIENTED PROGRAMMING</a>
-                         <a href="#" class="course-link" onclick="showCourse('python', event)">> PYTHON WEB DEVELOPMENT (django)</a>
-                         <a href="#" class="course-link" onclick="showCourse('bash', event)">> PYTHON MOBILE APP (kivy)</a>
+                         <a href="#" class="course-link" onclick="showCourse('p-outline1', event)">> PYTHON BASIC</a>
+                         <a href="#" class="course-link" onclick="showCourse('p-outline2', event)">> PYTHON OBJECT-ORIENTED PROGRAMMING</a>
+                         <a href="#" class="course-link" onclick="showCourse('p-outline3', event)">> PYTHON WEB DEVELOPMENT (django)</a>
+                         <a href="#" class="course-link" onclick="showCourse('p-outline4', event)">> PYTHON MOBILE APP (kivy)</a>
                     </div>
                     <pre>print("Hack the Planet!")</pre>
                     <button class="enroll-btn" onclick="enroll('Python Programming')">  ➔   Enroll Now</button>
@@ -446,10 +446,10 @@ int main() {
                     <p>Beginner To Professional</p>
                     <p>CheckOut Course Contents :</p>
                     <div class="course-links">
-                        <a href="#" class="course-link" onclick="showCourse('c', event)">> BASH BASIC/ADVANCE</a>
-                        <a href="#" class="course-link" onclick="showCourse('linux', event)">> BACKDOOR MAINTENANCE</a>
-                        <a href="#" class="course-link" onclick="showCourse('python', event)">> NETWORK MAPPING</a>
-                        <a href="#" class="course-link" onclick="showCourse('bash', event)">> LOG CLEANING</a>
+                        <a href="#" class="course-link" onclick="showCourse('b-outline1', event)">> BASH BASIC/ADVANCE</a>
+                        <a href="#" class="course-link" onclick="showCourse('b-outline2', event)">> BACKDOOR MAINTENANCE</a>
+                        <a href="#" class="course-link" onclick="showCourse('b-outline3', event)">> NETWORK MAPPING</a>
+                        <a href="#" class="course-link" onclick="showCourse('b-outline4', event)">> LOG CLEANING</a>
                    </div>
                     <pre>#!/bin/bash
 echo "Hello Terminal!"</pre>
