--- a/index.html
+++ b/index.html
@@ -461,10 +461,10 @@ echo "Hello Terminal!"</pre>
         // open popup course outline
 
         
-   const courseContent = {
+   const course = {
             c-outline1: {
                 title: "C_PROGRAMMING",
-                content: `
+                content: `<div class="terminal">
                     <h3>ROOT_ACCESS_GRANTED</h3>
                     <ul>
                         <li>Memory manipulation</li>
@@ -482,7 +482,7 @@ int main() {
             },
             l-outline1: {
                 title: "LINUX_ADMIN",
-                content: `
+                content: `<div class="terminal">
                     <h3>SYSTEM_OVERRIDE</h3>
                     <ul>
                         <li>Network penetration</li>
@@ -498,7 +498,7 @@ ps -ef | grep -v '\[.*\]'</pre>`
             },
             p-outline1: {
                 title: "PYTHON_SCRIPTING",
-                content: `
+                content: `<div class="terminal">
                     <h3>AUTOMATION_TOOLS</h3>
                     <ul>
                         <li>Network scanning</li>
@@ -518,7 +518,7 @@ for port in range(1, 1025):
             },
             b-outline1: {
                 title: "BASH_SCRIPTING",
-                content: `
+                content: `<div class="terminal">
                     <h3>SHELL_OVERRIDE</h3>
                     <ul>
                         <li>Privilege escalation</li>
