--- a/index.html
+++ b/index.html
@@ -246,6 +246,53 @@
     
     <!-- close popup -->
 
+        .modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.9);
+        z-index: 2000;
+    }
+
+    .modal-content {
+        background-color: #001a00;
+        margin: 5% auto;
+        padding: 25px;
+        width: 80%;
+        max-width: 800px;
+        border: 2px solid var(--hacker-green);
+        box-shadow: 0 0 25px rgba(0, 255, 0, 0.4);
+        position: relative;
+    }
+
+    .close {
+        color: var(--hacker-green);
+        float: right;
+        font-size: 32px;
+        font-weight: bold;
+        cursor: pointer;
+        text-shadow: 0 0 10px var(--hacker-green);
+    }
+
+    .close:hover {
+        color: #00ff00;
+    }
+
+    .modal-body {
+        padding: 20px;
+        color: var(--hacker-green);
+    }
+
+    .course-outline-content pre {
+        background: #000;
+        padding: 15px;
+        border-radius: 5px;
+        overflow-x: auto;
+    }
+
         <!-- Add this CSS -->
 <style>
     /* Updated Social Links Styles */
