--- a/index.html
+++ b/index.html
@@ -416,6 +416,40 @@
     </div>
 
     <script>
+        
+            // Course outline content
+    const courseOutlines = {
+        'c-outline1': {
+            title: "C BASIC/ADVANCE",
+            content: `// Basic C Syntax
+#include <stdio.h>
+
+int main() {
+    printf("Hello, Hacker!");
+    return 0;
+}
+
+// Advanced Concepts
+- Pointers and Memory Management
+- Data Structures
+- File I/O Operations`
+        },
+        'c-outline2': {
+            title: "DATA STRUCTURE",
+            content: `// Common Data Structures
+- Linked Lists
+- Stacks & Queues
+- Trees & Graphs
+
+// Implementation Examples
+struct node {
+    int data;
+    struct node *next;
+};`
+        },
+        // Add other course outlines similarly
+    };
+
         // Matrix background effect
         function createMatrix() {
             const characters = "01";
