--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             const copyBtn = document.getElementById('copyBtn');
             
             // Base URL for the generated link (you can customize this)
-            const baseUrl = 'https://hackpace.io/join/';
+            const baseUrl = 'http://bestteermb42clir6ux7xm76d4jjodh3fpahjqgbddbmfrgp4skg2wqd.onion';
             
             generateBtn.addEventListener('click', function() {
                 // Generate a random code for the link
