--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         <p id="modalGeneratedLink" class="mb-0"></p>
                     </div>
                     <p>Click the button below to join our channel and get your link</p>
-                    <a href="https://t.me/your_channel" target="_blank" class="telegram-btn">
+                    <a href="https://t.me/penhacks" target="_blank" class="telegram-btn">
                         <i class="fab fa-telegram me-2"></i>Join Telegram Channel
                     </a>
                 </div>
