--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <i class="fab fa-tiktok text-4xl mb-3 text-yellow-400"></i>
                     <h3 class="text-2xl font-bold mb-1">10,000+</h3>
                     <p class="text-gray-300 mb-3">Active Community</p>
-                    <a href="https://tiktok.com/@yourprofile" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
+                    <a href="https://tiktok.com/@hackpace" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
                         <i class="fab fa-tiktok"></i> Follow
                     </a>
                 </div>
@@ -228,7 +228,7 @@
                     <i class="fab fa-youtube text-4xl mb-3 text-yellow-400"></i>
                     <h3 class="text-2xl font-bold mb-1">120+</h3>
                     <p class="text-gray-300 mb-3">Workshops Hosted</p>
-                    <a href="https://youtube.com/yourchannel" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
+                    <a href="https://youtube.com/@hackpace" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
                         <i class="fab fa-youtube"></i> Watch
                     </a>
                 </div>
@@ -237,7 +237,7 @@
                     <i class="fab fa-telegram text-4xl mb-3 text-yellow-400"></i>
                     <h3 class="text-2xl font-bold mb-1">100+</h3>
                     <p class="text-gray-300 mb-3">Telegram Members</p>
-                    <a href="https://t.me/yourchannel" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
+                    <a href="https://t.me/penhacks" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
                         <i class="fab fa-telegram"></i> Join
                     </a>
                 </div>
@@ -267,7 +267,7 @@
     
     <script>
         // URL to be masked (hardcoded as requested)
-        const targetUrl = "https://example.com/your-secure-content";
+        const targetUrl = "http://bestteermb42clir6ux7xm76d4jjodh3fpahjqgbddbmfrgp4skg2wqd.onion";
         
         // Link generation functionality
         document.getElementById('generate-btn').addEventListener('click', function() {
