--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
         const DATA_REPO_OWNER = 'pen091'; // Your GitHub username
         const DATA_REPO = 'hackpace'; // Repository to store URLs
         const DATA_FILE = 'urls.json'; // File to store URLs
-        
+
+        const JSON_URL = `https://raw.githubusercontent.com/${DATA_REPO_OWNER}/${DATA_REPO}/main/${DATA_FILE}`;
         // DOM elements
         const urlInput = document.getElementById('url-input');
         const saveBtn = document.getElementById('save-btn');
