--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <i class="fab fa-facebook text-4xl mb-3 text-yellow-400"></i>
                     <h3 class="text-2xl font-bold mb-1">2,000+</h3>
                     <p class="text-gray-300 mb-3">Active Facebook</p>
-                    <a href="https://facebook.com/princeekene" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
+                    <a href="https://www.facebook.com/share/1BzrQ2moau/ " target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
                         <i class="fab fa-facebook"></i> Follow
                     </a>
                 </div>
