--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <i class="fab fa-youtube text-4xl mb-3 text-yellow-400"></i>
                     <h3 class="text-2xl font-bold mb-1">12+</h3>
                     <p class="text-gray-300 mb-3">YouTube</p>
-                    <a href="https://youtube.com/hackpace" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
+                    <a href="https://youtube.com/@hackpace" target="_blank" class="inline-block py-2 px-4 bg-gray-800 rounded-lg text-sm flex items-center justify-center gap-2">
                         <i class="fab fa-youtube"></i> Watch
                     </a>
                 </div>
