--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                         <div class="flex items-center gap-3 text-gray-300">
                             <i class="fas fa-users text-yellow-400"></i>
-                            <span>Remove Add characters after .onion</span>
+                            <span>Remove Add characters 6j61xu0d after .onion before use</span>
                         </div>
                     </div>
                 </div>
